hledger/test/errors/invalid-date.j
# hledger check

2022/1/32
  (a:c)  1
